Add TI-85 and TI-86 support.
git-svn-id: svn://svn.code.sf.net/p/tilem/code/trunk@2 05cf5367-e1a8-405a-8a5c-7f956f11530a

--- a/core/Makefile
+++ b/core/Makefile
@@ -14,8 +14,10 @@ x1_objects = x1_init.o x1_io.o x1_memory.o x1_subcore.o
 x2_objects = x2_init.o x2_io.o x2_memory.o x2_subcore.o
 x3_objects = x3_init.o x3_io.o x3_memory.o x3_subcore.o
 xp_objects = xp_init.o xp_io.o xp_memory.o xp_subcore.o
+x5_objects = x5_init.o x5_io.o x5_memory.o x5_subcore.o
+x6_objects = x6_init.o x6_io.o x6_memory.o x6_subcore.o
 
-objects = $(core_objects) $(x1_objects) $(x2_objects) $(x3_objects) $(xp_objects)
+objects = $(core_objects) $(x1_objects) $(x2_objects) $(x3_objects) $(xp_objects) $(x5_objects) $(x6_objects)
 
 compile = $(CC) -I$(top_builddir) -I$(srcdir) $(CFLAGS) $(CPPFLAGS) $(DEFS)
 
@@ -87,6 +89,28 @@ xp_memory.o: xp/xp_memory.c xp/xp.h tilem.h
 	$(compile) -c $(srcdir)/xp/xp_memory.c
 xp_subcore.o: xp/xp_subcore.c xp/xp.h tilem.h
 	$(compile) -c $(srcdir)/xp/xp_subcore.c
+
+# TI-85
+
+x5_init.o: x5/x5_init.c x5/x5.h tilem.h
+	$(compile) -c $(srcdir)/x5/x5_init.c
+x5_io.o: x5/x5_io.c x5/x5.h tilem.h
+	$(compile) -c $(srcdir)/x5/x5_io.c
+x5_memory.o: x5/x5_memory.c x5/x5.h tilem.h
+	$(compile) -c $(srcdir)/x5/x5_memory.c
+x5_subcore.o: x5/x5_subcore.c x5/x5.h tilem.h
+	$(compile) -c $(srcdir)/x5/x5_subcore.c
+
+# TI-86
+
+x6_init.o: x6/x6_init.c x6/x6.h tilem.h
+	$(compile) -c $(srcdir)/x6/x6_init.c
+x6_io.o: x6/x6_io.c x6/x6.h tilem.h
+	$(compile) -c $(srcdir)/x6/x6_io.c
+x6_memory.o: x6/x6_memory.c x6/x6.h tilem.h
+	$(compile) -c $(srcdir)/x6/x6_memory.c
+x6_subcore.o: x6/x6_subcore.c x6/x6.h tilem.h
+	$(compile) -c $(srcdir)/x6/x6_subcore.c
 
 
 clean:
