Start creation of the GUI : Draw the TI83 ,Create the savname,Open the Romfile,Get the model,Draw the LCDscreen (displayed in the pHBox - NO animation for the moment), Function event OnDestroy, Modification of the makefile
git-svn-id: svn://svn.code.sf.net/p/tilem/code/trunk@14 05cf5367-e1a8-405a-8a5c-7f956f11530a

--- a/gui/Makefile
+++ b/gui/Makefile
@@ -14,20 +14,27 @@ GTK_LIBS = `pkg-config --libs gtk+-2.0 gthread-2.0 ticalcs2`
 TICONV_CFLAGS = `pkg-config --cflags ticonv`
 TICONV_LIBS = `pkg-config --libs ticonv`
 
-objects = testemu.o
+
+objects = testemu2.o
+
 
 libs = -L../core -ltilemcore -lreadline $(GTK_LIBS) $(TICONV_LIBS) $(LIBS)
 
 compile = $(CC) -I$(top_builddir) -I$(srcdir) -I$(srcdir)/../core $(CFLAGS) $(CPPFLAGS) $(DEFS) $(GTK_CFLAGS) $(TICONV_CFLAGS)
 
-all: testemu
+all: testemu2
 
-testemu: $(objects) ../core/libtilemcore.a
-	$(CC) $(CFLAGS) $(LDFLAGS) -o testemu $(objects) $(libs)
 
-testemu.o: testemu.c ../core/tilem.h
-	$(compile) -c $(srcdir)/testemu.c
+testemu2: $(objects) ../core/libtilemcore.a
+	$(CC) $(CFLAGS) $(LDFLAGS) -o testemu2 $(objects) $(libs)
 
+	
+	
+
+testemu2.o: testemu2.c ../core/tilem.h
+	$(compile) -c $(srcdir)/testemu2.c
+
+	
 clean:
 	rm -f *.o
 	rm -f testemu
