just declare create_menus (warning when compile)
git-svn-id: svn://svn.code.sf.net/p/tilem/code/trunk@65 05cf5367-e1a8-405a-8a5c-7f956f11530a

--- a/gui/Makefile
+++ b/gui/Makefile
@@ -39,7 +39,7 @@ memory.o: memory.c ../core/tilem.h gui.h
 	$(compile) -c $(srcdir)/memory.c
 
 # Build the Skin set and define the key coord and the key list
-screen.o: screen.c ../core/tilem.h gui.h screen.h
+screen.o: screen.c ../core/tilem.h gui.h
 	$(compile) -c $(srcdir)/screen.c
 
 # Handle an GDKevent
