update_lcd, screen_repaint, screen_update works better...But always trying to print anything to the screen (lcd)... :(
git-svn-id: svn://svn.code.sf.net/p/tilem/code/trunk@102 05cf5367-e1a8-405a-8a5c-7f956f11530a

--- a/gui/Makefile
+++ b/gui/Makefile
@@ -1,6 +1,6 @@
 AR = ar
 CC = gcc
-CFLAGS = -g -O2 -W -Wall -DDEBUG
+CFLAGS = -g -W -Wall -DDEBUG -DG_ERRORCHECK_MUTEXES
 DEFS = -DPACKAGE_VERSION=\"pre-release\"
 RANLIB = ranlib
 
