--- a/gui/Makefile
+++ b/gui/Makefile
@@ -1,6 +1,6 @@
 AR = ar
 CC = gcc
-CFLAGS = -g -W  -Wall -DG_ERRORCHECK_MUTEXES -DDEBUGGINGGLOBAL_L0 -DDEBUGGINGGLOBAL_L2 -DDEBUGGINGSKIN_L0 -DDEBUGGINGCLICK_L0 -DDEBUGGINGDEBUGGER_L0 -DDEBUGGINGCONFIG_FILE_L0#-DDEBUGGINGCLICK_L2 -DDEBUGGINGLCD_L0 #-DDEBUGGINGLCD_L2
+CFLAGS = -g -W  -Wall -DG_ERRORCHECK_MUTEXES -DDGLOBAL_L0 -DDGLOBAL_L2 -DDSKIN_L0 -DDCLICK_L0 -DDDEBUGGER_L0 -DDCONFIG_FILE_L0 #-DDCLICK_L2 -DDLCD_L0 #-DDLCD_L2
 DEFS = -DPACKAGE_VERSION=\"pre-release\"
 RANLIB = ranlib
 
@@ -15,12 +15,12 @@ TICONV_CFLAGS = `pkg-config --cflags ticonv`
 TICONV_LIBS = `pkg-config --libs ticonv`
 
 
-objects = testemu2.o memory.o screen.o event.o skinops.o skin.o tool.o config.o debugger.o
+objects = testemu2.o memory.o screen.o event.o skinops.o skin.o tool.o config.o debugger.o ../db/disasm.o
 
 
 libs = -L../core -ltilemcore -lreadline $(GTK_LIBS) $(TICONV_LIBS) $(LIBS)
 
-compile = $(CC) -I$(top_builddir) -I$(srcdir) -I$(srcdir)/../core $(CFLAGS) $(CPPFLAGS) $(DEFS) $(GTK_CFLAGS) $(TICONV_CFLAGS)
+compile = $(CC) -I$(top_builddir) -I$(srcdir) -I$(srcdir)/../core -I$(srcdir)/../db $(CFLAGS) $(CPPFLAGS) $(DEFS) $(GTK_CFLAGS) $(TICONV_CFLAGS)
 
 all: testemu2
 
@@ -28,39 +28,39 @@ all: testemu2
 testemu2: $(objects) ../core/libtilemcore.a gui.h
 	$(CC) $(CFLAGS) $(LDFLAGS) -o testemu2 $(objects) $(libs)
 	
-testemu2.o: testemu2.c ../core/tilem.h gui.h
+testemu2.o: testemu2.c 
 	$(compile) -c $(srcdir)/testemu2.c
 
 #Debugger
-debugger.o: debugger.c ../core/tilem.h gui.h
-	$(compile) -c $(srcdir)/debugger.c
+debugger.o: debugger.c debugger.h gui.h 
+	$(compile) -c $(srcdir)/debugger.c 
 
 # Memory management and messages
-memory.o: memory.c ../core/tilem.h gui.h
+memory.o: memory.c 
 	$(compile) -c $(srcdir)/memory.c
 
 # Build the Skin set and define the key coord and the key list
-screen.o: screen.c ../core/tilem.h gui.h
+screen.o: screen.c gui.h 
 	$(compile) -c $(srcdir)/screen.c
 
 # Handle an GDKevent
-event.o: event.c ../core/tilem.h gui.h
+event.o: event.c event.h 
 	$(compile) -c $(srcdir)/event.c
 
 # Open skin
-skinops.o: skinops.c ../core/tilem.h skinops.h 
+skinops.o: skinops.c skinops.h 
 	$(compile) -c $(srcdir)/skinops.c
 
 # Manage skins
-skin.o: skin.c ../core/tilem.h gui.h 
-	$(compile) -c $(srcdir)/skin.c
+skin.o: skin.c skin.h
+	$(compile) -c $(srcdir)/skin.c 
 
 # Popups and other stuff
-tool.o: tool.c ../core/tilem.h gui.h 
+tool.o: tool.c gui.h  
 	$(compile) -c $(srcdir)/tool.c
 	
 # Popups and other stuff
-config.o: config.c ../core/tilem.h gui.h 
+config.o: config.c gui.h 
 	$(compile) -c $(srcdir)/config.c
 
 	
