New feature : could save the calc_id to do not choose the model at each start... Allow tilem2 to load all the .skn including tiemu (no error with magic number...) New file romconfig.c, romconfig.h (inspired from config.c and config.h)
git-svn-id: svn://svn.code.sf.net/p/tilem/code/trunk@142 05cf5367-e1a8-405a-8a5c-7f956f11530a

--- a/gui/Makefile
+++ b/gui/Makefile
@@ -15,7 +15,7 @@ TICONV_CFLAGS = `pkg-config --cflags ticonv`
 TICONV_LIBS = `pkg-config --libs ticonv`
 
 
-objects = testemu2.o memory.o screen.o event.o skinops.o skin.o tool.o config.o debugger.o ../db/disasm.o
+objects = testemu2.o memory.o screen.o event.o skinops.o skin.o tool.o config.o romconfig.o debugger.o ../db/disasm.o
 
 
 libs = -L../core -ltilemcore -lreadline $(GTK_LIBS) $(TICONV_LIBS) $(LIBS)
@@ -59,10 +59,13 @@ skin.o: skin.c skin.h
 tool.o: tool.c gui.h  
 	$(compile) -c $(srcdir)/tool.c
 	
-# Popups and other stuff
+# Manage skinconfig.dat
 config.o: config.c gui.h 
 	$(compile) -c $(srcdir)/config.c
 
+# Manage romconfig.dat
+romconfig.o: romconfig.c gui.h 
+	$(compile) -c $(srcdir)/romconfig.c
 	
 clean:
 	rm -f *.o
