Starting to work on a new feature : load a file (a big part of code comes from testemu1, thx Benjamin).Actually this is only a proof of concept, it works sometimes, but the most of the time there 's a bug.The problem seems to be the timer.I'll see that tomorrow :)
git-svn-id: svn://svn.code.sf.net/p/tilem/code/trunk@145 05cf5367-e1a8-405a-8a5c-7f956f11530a

--- a/gui/Makefile
+++ b/gui/Makefile
@@ -15,7 +15,7 @@ TICONV_CFLAGS = `pkg-config --cflags ticonv`
 TICONV_LIBS = `pkg-config --libs ticonv`
 
 
-objects = testemu2.o memory.o screen.o event.o skinops.o skin.o tool.o config.o romconfig.o debugger.o ../db/disasm.o
+objects = testemu2.o memory.o screen.o event.o skinops.o skin.o tool.o config.o romconfig.o debugger.o link.o ../db/disasm.o
 
 
 libs = -L../core -ltilemcore -lreadline $(GTK_LIBS) $(TICONV_LIBS) $(LIBS)
@@ -66,6 +66,10 @@ config.o: config.c gui.h
 # Manage romconfig.dat
 romconfig.o: romconfig.c gui.h 
 	$(compile) -c $(srcdir)/romconfig.c
+
+# Handle internal link
+link.o: link.c gui.h 
+	$(compile) -c $(srcdir)/link.c
 	
 clean:
 	rm -f *.o
