Correct the bug while loading file. Add a totally new feature : could record macro and play it.
git-svn-id: svn://svn.code.sf.net/p/tilem/code/trunk@150 05cf5367-e1a8-405a-8a5c-7f956f11530a

--- a/gui/Makefile
+++ b/gui/Makefile
@@ -15,7 +15,7 @@ TICONV_CFLAGS = `pkg-config --cflags ticonv`
 TICONV_LIBS = `pkg-config --libs ticonv`
 
 
-objects = testemu2.o memory.o screen.o event.o skinops.o skin.o tool.o config.o romconfig.o debugger.o link.o ../db/disasm.o
+objects = testemu2.o memory.o screen.o event.o skinops.o skin.o tool.o config.o romconfig.o debugger.o link.o ../db/disasm.o macro.o
 
 
 libs = -L../core -ltilemcore -lreadline $(GTK_LIBS) $(TICONV_LIBS) $(LIBS)
@@ -71,6 +71,9 @@ romconfig.o: romconfig.c gui.h
 link.o: link.c gui.h 
 	$(compile) -c $(srcdir)/link.c
 	
+# Handle macro
+macro.o: macro.c gui.h 
+	$(compile) -c $(srcdir)/macro.c
 clean:
 	rm -f *.o
 	rm -f testemu2
