Add gifencod.c gifencod.h animatedgif.c animatedgif.h.Animated screenshot is basically working, but not connected.Lot of debugging to do on it, and timer to add.This commit is a backup commit (I don't want to loose this work :D).Just wait another commit if you want to test this feature.
git-svn-id: svn://svn.code.sf.net/p/tilem/code/trunk@161 05cf5367-e1a8-405a-8a5c-7f956f11530a

--- a/gui/Makefile
+++ b/gui/Makefile
@@ -15,7 +15,7 @@ TICONV_CFLAGS = `pkg-config --cflags ticonv`
 TICONV_LIBS = `pkg-config --libs ticonv`
 
 
-objects = testemu2.o memory.o screen.o event.o skinops.o skin.o tool.o config.o romconfig.o debugger.o link.o ../db/disasm.o macro.o args.o
+objects = testemu2.o memory.o screen.o event.o skinops.o skin.o tool.o config.o romconfig.o debugger.o link.o ../db/disasm.o macro.o args.o gifencod.o animatedgif.o
 
 
 libs = -L../core -ltilemcore -lreadline $(GTK_LIBS) $(TICONV_LIBS) $(LIBS)
@@ -79,6 +79,17 @@ macro.o: macro.c gui.h
 args.o: args.c gui.h 
 	$(compile) -c $(srcdir)/args.c
 
+# Create and modify animated gif
+gifencod.o: gifencod.c gui.h
+	$(compile) -c $(srcdir)/gifencod.c
+
+# Handle screenshot anim (animated gif)
+animatedgif.o: animatedgif.c gui.h
+	$(compile) -c $(srcdir)/animatedgif.c
+
+install: testemu2
+	chmod +x install.sh
+	./install.sh
 clean:
 	rm -f *.o
 	rm -f testemu2
