Reformatted, removed some redundant code
git-svn-id: svn://svn.code.sf.net/p/tilem/code/trunk@169 05cf5367-e1a8-405a-8a5c-7f956f11530a

--- a/gui/Makefile
+++ b/gui/Makefile
@@ -52,7 +52,7 @@ skinops.o: skinops.c skinops.h
 	$(compile) -c $(srcdir)/skinops.c
 
 # Manage skins
-skin.o: skin.c skin.h
+skin.o: skin.c skin.h gui.h
 	$(compile) -c $(srcdir)/skin.c 
 
 # Popups and other stuff
