Save automatically the last opened directory when sending file.When you load a file, the open file window directly opens the most recent directory. Works if you close tilem and reopen it
git-svn-id: svn://svn.code.sf.net/p/tilem/code/trunk@206 05cf5367-e1a8-405a-8a5c-7f956f11530a

--- a/gui/config.ini
+++ b/gui/config.ini
@@ -16,6 +16,9 @@ rom7=test2
 rom8=test2
 rom9=test2
 
+[upload]
+sendfile_recentdir=/home/tib/Code/z80/C
+
 [skin]
 /home/tib/roms/ti83_110.rom=/home/tib/Code/tilem203/trunk/gui/skn/ti83.skn
 
@@ -25,3 +28,4 @@ rom9=test2
 ti83_110.rom=3
 /home/tib/roms/ti83_110.rom=3
 /home/tib/roms/ti83p_112.rom=p
+/home/tib/roms/ti84se.rom=z
