--- a/gui/config.ini
+++ b/gui/config.ini
@@ -23,5 +23,8 @@ sendfile_recentdir=/home/tib/Code/z80/z80
 /home/tib/roms/ti83_110.rom=/home/tib/Code/tilem203/trunk/gui/skn/ti83.skn
 /home/tib/roms/ti83p_112.rom=/home/tib/Code/tilem203/trunk/gui/skn/ti83plus.skn
 
+/home/tib/roms/ti86.rom=/home/tib/Code/tilem203/trunk/gui/skn/ti81.skn
+
 [model]
 /home/tib/roms/ti83_110.rom=3
+/home/tib/roms/ti86.rom=6
