--- a/gui/config.ini
+++ b/gui/config.ini
@@ -22,8 +22,8 @@ sendfile_recentdir=/home/tib/Code/z80/z80
 [skin]
 /home/tib/roms/ti83_110.rom=/home/tib/Code/tilem203/trunk/gui/skn/ti83.skn
 /home/tib/roms/ti83p_112.rom=/home/tib/Code/tilem203/trunk/gui/skn/ti83plus.skn
-
 /home/tib/roms/ti86.rom=/home/tib/Code/tilem203/trunk/gui/skn/ti81.skn
+basedir=./skn/
 
 [model]
 /home/tib/roms/ti83_110.rom=3
