new structure to handle cmd line args. Just refactoring, no new functionality
git-svn-id: svn://svn.code.sf.net/p/tilem/code/trunk@237 05cf5367-e1a8-405a-8a5c-7f956f11530a

--- a/gui/Makefile
+++ b/gui/Makefile
@@ -95,6 +95,10 @@ screenshot.o: screenshot.c gui.h *.h ../core/tilem.h
 pbar.o: pbar.c gui.h *.h ../core/tilem.h
 	$(compile) -c $(srcdir)/pbar.c
 
+# Startup handling 
+
+
+
 install: testemu2
 	chmod +x install.sh
 	./install.sh
