--- a/gui/config.ini
+++ b/gui/config.ini
@@ -17,7 +17,7 @@ rom8=test2
 rom9=test2
 
 [upload]
-sendfile_recentdir=/home/tib/Downloads/ion
+sendfile_recentdir=/home/tib/Documents
 
 [skin]
 /home/tib/roms/ti83_110.rom=/home/tib/Code/tilem203/trunk/gui/skn/ti83.skn
@@ -28,3 +28,6 @@ basedir=./skn/
 [model]
 /home/tib/roms/ti83_110.rom=3
 /home/tib/roms/ti86.rom=6
+
+[macro]
+loadmacro_recentdir=/home/tib/Music
