--- a/gui/Makefile
+++ b/gui/Makefile
@@ -15,7 +15,7 @@ TICONV_CFLAGS = `pkg-config --cflags ticonv`
 TICONV_LIBS = `pkg-config --libs ticonv`
 
 
-objects = testemu2.o memory.o emulator.o screen.o event.o skinops.o skin.o tool.o config.o debugger.o link.o ../db/disasm.o macro.o args.o gifencod.o animatedgif.o screenshot.o pbar.o ti81prg.o
+objects = testemu2.o memory.o emulator.o screen.o event.o skinops.o skin.o tool.o config.o debugger.o link.o ../db/disasm.o macro.o args.o gifencod.o animatedgif.o screenshot.o pbar.o keybindings.o ti81prg.o
 
 
 libs = -L../core -ltilemcore -lreadline $(GTK_LIBS) $(TICONV_LIBS) $(LIBS)
@@ -94,6 +94,12 @@ screenshot.o: screenshot.c gui.h *.h ../core/tilem.h
 # Progress bar widget
 pbar.o: pbar.c gui.h *.h ../core/tilem.h
 	$(compile) -c $(srcdir)/pbar.c
+
+
+# Keybindings
+keybindings.o: keybindings.c gui.h *.h ../core/tilem.h
+	$(compile) -c $(srcdir)/keybindings.c
+
 
 # TI-81 program file functions
 ti81prg.o: ti81prg.c ti81prg.h ../core/tilem.h
