Some kludgy work for keybindings (now handling 1 key pressed do 2 actions)
git-svn-id: svn://svn.code.sf.net/p/tilem/code/trunk@252 05cf5367-e1a8-405a-8a5c-7f956f11530a

--- a/gui/keybindings.ini
+++ b/gui/keybindings.ini
@@ -1,18 +1,42 @@
 [ti83]
-GDK_A=TILEM_KEY_ALPHA
-GDK_B=TILEM_KEY_ALPHA
-GDK_C=TILEM_KEY_ALPHA
-GDK_D=TILEM_KEY_ALPHA
-GDK_a=TILEM_KEY_WINDOW
-GDK_b=TILEM_KEY_CLEAR
-GDK_1=TILEM_KEY_1
+GDK_A=TILEM_KEY_ALPHA:TILEM_KEY_MATH
+GDK_B=TILEM_KEY_ALPHA:TILEM_KEY_MATRIX
+GDK_C=TILEM_KEY_ALPHA:TILEM_KEY_PRGM
+GDK_D=TILEM_KEY_ALPHA:TILEM_KEY_RECIP
+GDK_E=TILEM_KEY_ALPHA:TILEM_KEY_SIN
+GDK_F=TILEM_KEY_ALPHA:TILEM_KEY_COS
+GDK_G=TILEM_KEY_ALPHA:TILEM_KEY_TAN
+GDK_H=TILEM_KEY_ALPHA:TILEM_KEY_POWER
+GDK_I=TILEM_KEY_ALPHA:TILEM_KEY_SQUARE
+GDK_J=TILEM_KEY_ALPHA:TILEM_KEY_COMMA
+GDK_K=TILEM_KEY_ALPHA:TILEM_KEY_LPAREN
+GDK_L=TILEM_KEY_ALPHA:TILEM_KEY_RPAREN
+GDK_M=TILEM_KEY_ALPHA:TILEM_KEY_DIV
+GDK_N=TILEM_KEY_ALPHA:TILEM_KEY_LOG
+GDK_O=TILEM_KEY_ALPHA:TILEM_KEY_7
+GDK_P=TILEM_KEY_ALPHA:TILEM_KEY_8
+GDK_Q=TILEM_KEY_ALPHA:TILEM_KEY_9
+GDK_R=TILEM_KEY_ALPHA:TILEM_KEY_MUL
+GDK_S=TILEM_KEY_ALPHA:TILEM_KEY_LN
+GDK_T=TILEM_KEY_ALPHA:TILEM_KEY_4
+GDK_U=TILEM_KEY_ALPHA:TILEM_KEY_5
+GDK_V=TILEM_KEY_ALPHA:TILEM_KEY_6
+GDK_W=TILEM_KEY_ALPHA:TILEM_KEY_SUB
+GDK_X=TILEM_KEY_ALPHA:TILEM_KEY_STORE
+GDK_Y=TILEM_KEY_ALPHA:TILEM_KEY_1
+GDK_Z=TILEM_KEY_ALPHA:TILEM_KEY_2
+GDK_a=TILEM_KEY_ALPHA
+GDK_1=TILEM_KEY_1:
 GDK_2=TILEM_KEY_2
 GDK_3=TILEM_KEY_3
 GDK_4=TILEM_KEY_4
 GDK_5=TILEM_KEY_5
-GDK_7=TILEM_KEY_6
-GDK_8=TILEM_KEY_7
-GDK_9=TILEM_KEY_8
-GDK_0=TILEM_KEY_9
-GDK_BackSpace=TILEM_KEY_CLEAR
+GDK_6=TILEM_KEY_6
+GDK_7=TILEM_KEY_7
+GDK_8=TILEM_KEY_8
+GDK_9=TILEM_KEY_9
+GDK_0=TILEM_KEY_0
+GDK_Return=TILEM_KEY_1
+GDK_BackSpace=TILEM_KEY_LEFT:TILEM_KEY_DEL
+GDK_Escape=TILEM_KEY_2ND:TILEM_KEY_MODE
 
